# shroudb-veil

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  DOCS.md  Dockerfile  ENGINE_DAG.md  LICENSE  README.md  TODOS.md  deny.toml  docker-entrypoint.sh  protocol.toml  shroudb-veil.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
shroudb-veil-blind/: Cargo.toml
shroudb-veil-blind/src/: lib.rs
shroudb-veil-cli/: Cargo.toml
shroudb-veil-cli/src/: main.rs
shroudb-veil-client/: Cargo.toml
shroudb-veil-client/src/: connection.rs  error.rs  lib.rs  response.rs
shroudb-veil-core/: Cargo.toml
shroudb-veil-core/src/: error.rs  index.rs  lib.rs  matcher.rs  matching.rs  query.rs  tokenizer.rs
shroudb-veil-engine/: Cargo.toml
shroudb-veil-engine/src/: engine.rs  hmac_ops.rs  index_manager.rs  lib.rs  search.rs  test_support.rs
shroudb-veil-protocol/: Cargo.toml
shroudb-veil-protocol/src/: command.rs  command_parser.rs  commands.rs  dispatch.rs  embedded.rs  error.rs  lib.rs  remote.rs  response.rs  search_engine.rs  serialize.rs  transit_backend.rs
shroudb-veil-protocol/src/handlers/: health.rs  index.rs  mod.rs  search.rs
shroudb-veil-protocol/src/resp3/: mod.rs  parse_command.rs  serialize.rs
shroudb-veil-protocol/tests/: integration_tests.rs
shroudb-veil-server/: Cargo.toml
shroudb-veil-server/src/: config.rs  connection.rs  http.rs  main.rs  server.rs  tcp.rs
shroudb-veil-server/tests/: integration.rs
shroudb-veil-server/tests/common/: mod.rs
