[workspace]
resolver = "3"
default-members = ["shroudb-veil-server"]
members = [
    "shroudb-veil-core",
    "shroudb-veil-engine",
    "shroudb-veil-protocol",
    "shroudb-veil-server",
    "shroudb-veil-client",
    "shroudb-veil-cli",
]

[workspace.package]
version = "1.2.10"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-veil-core = { path = "shroudb-veil-core", version = "1.2.9", registry = "shroudb" }
shroudb-veil-engine = { path = "shroudb-veil-engine", version = "1.2.9", registry = "shroudb" }
shroudb-veil-protocol = { path = "shroudb-veil-protocol", version = "1.2.9", registry = "shroudb" }
shroudb-veil-client = { path = "shroudb-veil-client", version = "1.2.9", registry = "shroudb" }

# ShrouDB commons (shroudb registry)
shroudb-store = { version = "0.1.2", registry = "shroudb" }
shroudb-storage = { version = "0.2.13", registry = "shroudb" }
shroudb-acl = { version = "0.1.3", registry = "shroudb" }
shroudb-crypto = { version = "0.1.1", registry = "shroudb" }
shroudb-chronicle-core = { version = "1.2.2", registry = "shroudb" }
shroudb-protocol-wire = { version = "0.1.0", registry = "shroudb" }
shroudb-server-tcp = { version = "0.1.0", registry = "shroudb" }
shroudb-server-bootstrap = { version = "0.1.0", registry = "shroudb" }
shroudb-client-common = { version = "0.1.0", registry = "shroudb" }

# Crypto
ring = "0.17"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Security
zeroize = { version = "1", features = ["derive", "serde"] }

# Utilities
anyhow = "1"
thiserror = "2"
hex = "0.4"
base64 = "0.22"
dashmap = "6"
