[package]
name = "shroudb-veil-blind"
description = "Client-side blind token generation for Veil E2EE workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
shroudb-veil-core.workspace = true

ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
zeroize.workspace = true
