[package]
name = "shroudb-veil-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["embedded"]
embedded = [
    "dep:shroudb-transit-protocol",
    "dep:shroudb-transit-core",
    "dep:shroudb-core",
    "dep:shroudb-crypto",
    "dep:shroudb-storage",
    "dep:ring",
    "dep:hex",
]

[dependencies]
shroudb-veil-core.workspace = true
shroudb-transit-client.workspace = true

# Embedded mode: full Transit engine in-process
shroudb-transit-protocol = { workspace = true, optional = true }
shroudb-transit-core = { workspace = true, optional = true }
shroudb-core = { workspace = true, optional = true }
shroudb-crypto = { workspace = true, optional = true }
shroudb-storage = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
# dashmap used by embedded mode AND dispatch config store
dashmap.workspace = true
hex = { workspace = true, optional = true }

shroudb-protocol-wire.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
metrics.workspace = true
base64.workspace = true
zeroize.workspace = true

[dev-dependencies]
shroudb-crypto.workspace = true
shroudb-storage.workspace = true
shroudb-transit-protocol.workspace = true
shroudb-transit-core.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
