[package]
name = "shroudb-veil-server"
description = "TCP server for the Veil blind index engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "shroudb-veil"
path = "src/main.rs"

[dependencies]
shroudb-veil-core.workspace = true
shroudb-veil-engine.workspace = true
shroudb-veil-protocol.workspace = true
shroudb-acl.workspace = true
shroudb-store.workspace = true
shroudb-storage.workspace = true
shroudb-protocol-wire.workspace = true
shroudb-server-tcp.workspace = true
shroudb-server-bootstrap.workspace = true
shroudb-engine-bootstrap.workspace = true
shroudb-client.workspace = true

tokio.workspace = true
tokio-rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true

[dev-dependencies]
shroudb-veil-client.workspace = true
shroudb-veil-blind.workspace = true
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json.workspace = true
base64.workspace = true
